--- a/presentation/scrp_workshop.Rmd
+++ b/presentation/scrp_workshop.Rmd
@@ -143,7 +143,7 @@ Resul Umit
 - One day, on how to automate the process of extracting data from websites
 
   - 200+ slides, 75+ exercises
-  - a [demonstration website](https://parliament-luzland.netlify.app/) for practice
+  - a [demonstration website](https://luzpar.netlify.app/) for practice
 
 --
 
@@ -376,7 +376,7 @@ class: action
 
 - There is a demonstration website for this workshop
 
-   - available at <https://parliament-luzland.netlify.app/>
+   - available at <https://luzpar.netlify.app/>
    - includes fabricated data on the imaginary Parliament of Luzland
    - provides us with plenty of data, stable structure, and an ethical playground
 
@@ -940,7 +940,7 @@ robotstxt(
 ## Considerations &mdash; the Ethics &mdash; `robotstxt`
 
 ```{r}
-robotstxt(domain = "https://parliament-luzland.netlify.app")
+robotstxt(domain = "https://luzpar.netlify.app")
 ```
 
 ---
@@ -976,27 +976,27 @@ paths_allowed(
 ## Considerations &mdash; the Ethics &mdash; `robotstxt`
 
 ```{r, message=FALSE}
-paths_allowed(domain = "https://parliament-luzland.netlify.app")
+paths_allowed(domain = "https://luzpar.netlify.app")
 ```
 
 
 ```md
-paths_allowed(domain = "https://parliament-luzland.netlify.app", 
+paths_allowed(domain = "https://luzpar.netlify.app", 
               `paths = c("/states/", "/constituencies/")`)
 ```
 
 ```{r, message=FALSE, echo=FALSE}
-paths_allowed(domain = "https://parliament-luzland.netlify.app", 
+paths_allowed(domain = "https://luzpar.netlify.app", 
               paths = c("/states/", "/constituencies/"))
 ```
 
 ```md
-paths_allowed(domain = "https://parliament-luzland.netlify.app", 
+paths_allowed(domain = "https://luzpar.netlify.app", 
               paths = c("/states/", "/constituencies/"), `bot = "googlebot"`)
 ```
 
 ```{r, message=FALSE, echo=FALSE}
-paths_allowed(domain = "https://parliament-luzland.netlify.app", 
+paths_allowed(domain = "https://luzpar.netlify.app", 
               paths = c("/states/", "/constituencies/"), bot = "googlebot")
 ```
 
@@ -1766,7 +1766,7 @@ class: inverse, center, middle
 Use the `read_html` function to get the source code of a page into R
 
 ```{r}
-read_html("https://parliament-luzland.netlify.app/")
+read_html("https://luzpar.netlify.app/")
 ```
 
 ---
@@ -1775,8 +1775,8 @@ read_html("https://parliament-luzland.netlify.app/")
 You may wish to check the protocol first
 
 ```{r, message=FALSE}
-paths_allowed(domain = "https://parliament-luzland.netlify.app/")
-read_html("https://parliament-luzland.netlify.app/")
+paths_allowed(domain = "https://luzpar.netlify.app/")
+read_html("https://luzpar.netlify.app/")
 ```
 
 ---
@@ -1810,8 +1810,6 @@ read_html("https://parliament-luzland.netlify.app/")
 - First, use the `bow` function to check the protocol
 
    - for a specific .yellow-h[URL]
-
-
 
 ]
 
@@ -1927,7 +1925,321 @@ scrape(`bow`,
 ]
 
 ---
+## Scraping Static Pages &mdash; `rvest` &mdash; Get Source Code
 
+These two are equal, when there is no protocol against
+
+```{r, message=FALSE}
+bow(url = "https://luzpar.netlify.app/") %>%  
+    scrape()
+```
+
+```{r, message=FALSE}
+read_html("https://luzpar.netlify.app/")
+```
+
+---
+## Scraping Static Pages &mdash; `rvest` &mdash; Get Source Code
+
+The difference occurs when there is protocol against 
+
+```md
+bow(url = "https://luzpar.netlify.app`/states/`",
+    user_agent = `"googlebot"`) %>%  
+    scrape()
+```
+
+```{r, echo=FALSE}
+bow(url = "https://luzpar.netlify.app/states/",
+    user_agent = "googlebot") %>%  
+    scrape()
+```
+
+---
+## Scraping Static Pages &mdash; `rvest` &mdash; `html_elements`
+
+.pull-left[
+
+- Get one or more HTML elements
+
+   - specified with a selector
+       - css or xpath     
+<br>
+  - we will work with css in this workshop
+       - facilitated by ScrapeMate
+       
+<br>
+
+- Note that
+ 
+  - there are two versions of the same function
+      - singular one gets the first instance of an element
+      - plural one gets all instances
+      
+]
+
+
+.pull-right[
+
+```md
+
+html_element(x, 
+             css, 
+             xpath)
+
+html_elements(x, 
+              css, 
+              xpath)
+
+```
+
+]
+
+---
+## Scraping Static Pages &mdash; `rvest` &mdash; `html_elements`
+
+Get the anchor (a) elements on the homepage
+
+```{r, eval=FALSE}
+bow(url = "https://luzpar.netlify.app") %>%
+  scrape() %>%
+  `html_elements(css = "a")`
+```
+
+```{r, echo=FALSE}
+bow(url = "https://luzpar.netlify.app") %>%
+  scrape() %>%
+  html_elements(css = "a")
+```
+
+---
+## Scraping Static Pages &mdash; `rvest` &mdash; `html_elements`
+
+I would like to get only the URLs on the main body of the page
+- ScrapeMate tells me the correct selector is `#title` `a`
+
+```{r, eval=FALSE}
+bow(url = "https://luzpar.netlify.app") %>%
+  scrape() %>%
+  html_elements(css = `"#title a"`)
+```
+
+```{r, echo=FALSE}
+bow(url = "https://luzpar.netlify.app") %>%
+  scrape() %>%
+  html_elements(css = "#title a")
+```
+
+---
+## Scraping Static Pages &mdash; `rvest` &mdash; `html_text`
+
+.pull-left[
+
+- Get the text content of one or more HTML elements
+
+   - for the elements already chosen
+      - with the `html_elements` function     
+<br>    
+   - this returns what is already visible to visitors
+       
+<br>
+
+- Note that
+ 
+  - there are two versions of the same function
+     - `html_text` returns text with any space or line breaks around it 
+     - `html_text2` returns plain text
+      
+]
+
+
+.pull-right[
+
+```{r, eval=FALSE}
+
+html_text(x, trim = FALSE)
+
+html_text2(x, preserve_nbsp = FALSE)
+```
+
+]
+
+---
+## Scraping Static Pages &mdash; `rvest` &mdash; `html_text`
+
+```{r, eval=FALSE}
+bow(url = "https://luzpar.netlify.app") %>%
+  scrape() %>%
+  html_elements(css = "#title a") %>% 
+  `html_text()`
+```
+
+```{r, echo=FALSE}
+bow(url = "https://luzpar.netlify.app") %>%
+  scrape() %>%
+  html_elements(css = "#title a") %>% 
+  html_text()
+```
+
+---
+## Scraping Static Pages &mdash; `rvest` &mdash; `html_attr`
+
+.pull-left[
+
+- Get one or more attributes of one or more HTML elements
+
+   - for the elements already chosen
+      - with the `html_elements` function     
+<br>    
+   - attributes are specified with their name 
+       - not css or xpath
+       
+<br>
+
+- Note that
+ 
+  - there are two versions of the same function
+      - singular one gets a specified attribute
+      - plural one gets all available attibutes
+      
+]
+
+
+.pull-right[
+
+```md
+
+html_attr(x, name, default = NA_character_)
+
+html_attrs(x)
+
+```
+
+]
+
+---
+## Scraping Static Pages &mdash; `rvest` &mdash; `html_attrs`
+
+```{r, eval=FALSE}
+bow(url = "https://luzpar.netlify.app") %>%
+  scrape() %>%
+  html_elements(css = "#title a") %>% 
+  `html_attrs()`
+```
+
+```{r, echo=FALSE}
+bow(url = "https://luzpar.netlify.app") %>%
+  scrape() %>%
+  html_elements(css = "#title a") %>% 
+  html_attrs()
+```
+
+---
+## Scraping Static Pages &mdash; `rvest` &mdash; `html_attr`
+
+```{r, eval=FALSE}
+bow(url = "https://luzpar.netlify.app") %>%
+  scrape() %>%
+  html_elements(css = "#title a") %>% 
+  `html_attr(name = "href")`
+```
+
+```{r, echo=FALSE}
+bow(url = "https://luzpar.netlify.app") %>%
+  scrape() %>%
+  html_elements(css = "#title a") %>% 
+  html_attr(name = "href")
+```
+
+--
+
+Note that
+
+- some URLs are given relative to the base URL
+   - e.g., `/states/`, which is actually `/states/`
+   - you can complete them with the `url_absolute` function
+   
+---
+## Scraping Static Pages &mdash; `rvest` &mdash; `url_absolute`
+
+Complete the relative URLs with the `url_absolute` function
+```{r, eval=FALSE}
+bow(url = "https://luzpar.netlify.app") %>%
+  scrape() %>%
+  html_elements(css = "#title a") %>% 
+  html_attr(name = "href") %>% 
+  `url_absolute(base = "https://luzpar.netlify.app")`
+```
+
+```{r, echo=FALSE}
+bow(url = "https://luzpar.netlify.app") %>%
+  scrape() %>%
+  html_elements(css = "#title a") %>% 
+  html_attr(name = "href") %>% 
+  url_absolute(base = "https://luzpar.netlify.app")
+```
+
+---
+## Scraping Static Pages &mdash; `rvest` &mdash; `html_table`
+
+Use the `html_table()` function to get the text content of table elements
+
+```{r, eval=FALSE}
+bow(url = "https://luzpar.netlify.app/members/") %>%
+  scrape() %>%
+  html_elements(css = "table") %>% 
+  `html_table()`
+```
+
+.out-t[
+
+```
+## [[1]]
+## # A tibble: 100 x 3
+##   Member           Constituency  Party      
+##   <chr>            <chr>         <chr>      
+##  1 Arthur Ali       Mühlshafen    Liberal    
+##  2 Chris Antony     Benwerder     Labour     
+##  3 Chloë Bakker     Steffisfelden Labour     
+##  4 Rose Barnes      Dillon        Liberal    
+##  5 Emilia Bauer     Kilnard       Green      
+##  6 Wilma Baumann    Granderry     Green      
+##  7 Matteo Becker    Enkmelo       Labour     
+##  8 Patricia Bernard Gänsernten    Labour     
+##  9 Lina Booth       Leonrau       Liberal    
+## 10 Sophie Bos       Zotburg       Independent
+## # ... with 90 more rows
+
+```
+]
+
+---
+
+.out-t[
+
+```
+
+## [[1]]
+## # A tibble: 100 x 3
+##   Member           Constituency  Party      
+##   <chr>            <chr>         <chr>      
+##  1 Arthur Ali       Mühlshafen    Liberal    
+##  2 Chris Antony     Benwerder     Labour     
+##  3 Chloë Bakker     Steffisfelden Labour     
+##  4 Rose Barnes      Dillon        Liberal    
+##  5 Emilia Bauer     Kilnard       Green      
+##  6 Wilma Baumann    Granderry     Green      
+##  7 Matteo Becker    Enkmelo       Labour     
+##  8 Patricia Bernard Gänsernten    Labour     
+##  9 Lina Booth       Leonrau       Liberal    
+## 10 Sophie Bos       Zotburg       Independent
+## # ... with 90 more rows
+
+```
+]
+
+
+   
 ---
 name: part5
 class: inverse, center, middle
